// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormBehaviour/Checkboxes IDPrefixAndNameSupplied smoke-test 1`] = `
<div style="padding: 20px;">
  <h2>
    Scenario: ID Prefix and Name Supplied
  </h2>
  <h5>
    Expected Behaviour
  </h5>
  <ul class="nhsuk-hint">
    <li>
      Boxes are selectable via their labels
    </li>
    <li>
      The Checkboxes are assigned IDs according to the ID prefix
    </li>
    <li>
      The Checkboxes have the same name as the Checkboxes component
    </li>
  </ul>
  <h5>
    Results
  </h5>
  <ul class="nhsuk-hint">
    <li>
      Box 1 ID:idprefix-1
    </li>
    <li>
      Box 2 ID:idprefix-2
    </li>
    <li>
      Box 3 ID:idprefix-3
    </li>
    <li>
      Box 1 Name:testname
    </li>
    <li>
      Box 2 Name:testname
    </li>
    <li>
      Box 3 Name:testname
    </li>
  </ul>
  <h5>
    Component
  </h5>
  <div class="nhsuk-form-group">
    <div class="nhsuk-checkboxes"
         id="checkboxes_qr2rn"
    >
      <div class="nhsuk-checkboxes__item">
        <input class="nhsuk-checkboxes__input"
               name="testname"
               id="idprefix-1"
               type="checkbox"
        >
        <label class="nhsuk-label nhsuk-checkboxes__label"
               id="idprefix-1--label"
               for="idprefix-1"
        >
          Box 1
        </label>
      </div>
      <div class="nhsuk-checkboxes__item">
        <input class="nhsuk-checkboxes__input"
               name="testname"
               id="idprefix-2"
               type="checkbox"
        >
        <label class="nhsuk-label nhsuk-checkboxes__label"
               id="idprefix-2--label"
               for="idprefix-2"
        >
          Box 2
        </label>
      </div>
      <div class="nhsuk-checkboxes__item">
        <input class="nhsuk-checkboxes__input"
               name="testname"
               id="idprefix-3"
               type="checkbox"
        >
        <label class="nhsuk-label nhsuk-checkboxes__label"
               id="idprefix-3--label"
               for="idprefix-3"
        >
          Box 3
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`FormBehaviour/Checkboxes IDPrefixSupplied smoke-test 1`] = `
<div style="padding: 20px;">
  <h2>
    Scenario: ID Prefix Supplied
  </h2>
  <h5>
    Expected Behaviour
  </h5>
  <ul class="nhsuk-hint">
    <li>
      Boxes are selectable via their labels
    </li>
    <li>
      The Checkboxes are assigned IDs according to the ID prefix
    </li>
    <li>
      The Checkboxes are assigned randomly generated names
    </li>
  </ul>
  <h5>
    Results
  </h5>
  <ul class="nhsuk-hint">
    <li>
      Box 1 ID:idprefix-1
    </li>
    <li>
      Box 2 ID:idprefix-2
    </li>
    <li>
      Box 3 ID:idprefix-3
    </li>
    <li>
      Box 1 Name:checkboxes_uilvo
    </li>
    <li>
      Box 2 Name:checkboxes_uilvo
    </li>
    <li>
      Box 3 Name:checkboxes_uilvo
    </li>
  </ul>
  <h5>
    Component
  </h5>
  <div class="nhsuk-form-group">
    <div class="nhsuk-checkboxes"
         id="checkboxes_uilvo"
    >
      <div class="nhsuk-checkboxes__item">
        <input class="nhsuk-checkboxes__input"
               name="checkboxes_uilvo"
               id="idprefix-1"
               type="checkbox"
        >
        <label class="nhsuk-label nhsuk-checkboxes__label"
               id="idprefix-1--label"
               for="idprefix-1"
        >
          Box 1
        </label>
      </div>
      <div class="nhsuk-checkboxes__item">
        <input class="nhsuk-checkboxes__input"
               name="checkboxes_uilvo"
               id="idprefix-2"
               type="checkbox"
        >
        <label class="nhsuk-label nhsuk-checkboxes__label"
               id="idprefix-2--label"
               for="idprefix-2"
        >
          Box 2
        </label>
      </div>
      <div class="nhsuk-checkboxes__item">
        <input class="nhsuk-checkboxes__input"
               name="checkboxes_uilvo"
               id="idprefix-3"
               type="checkbox"
        >
        <label class="nhsuk-label nhsuk-checkboxes__label"
               id="idprefix-3--label"
               for="idprefix-3"
        >
          Box 3
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`FormBehaviour/Checkboxes NameSupplied smoke-test 1`] = `
<div style="padding: 20px;">
  <h2>
    Scenario: Name Supplied
  </h2>
  <h5>
    Expected Behaviour
  </h5>
  <ul class="nhsuk-hint">
    <li>
      Boxes are selectable via their labels
    </li>
    <li>
      The Checkboxes are assigned IDs according to the Checkboxes Name
    </li>
  </ul>
  <h5>
    Results
  </h5>
  <ul class="nhsuk-hint">
    <li>
      Box 1 ID:checkboxes_nuwkl-1
    </li>
    <li>
      Box 2 ID:checkboxes_nuwkl-2
    </li>
    <li>
      Box 3 ID:checkboxes_nuwkl-3
    </li>
    <li>
      Box 1 Name:name-supplied
    </li>
    <li>
      Box 2 Name:name-supplied
    </li>
    <li>
      Box 3 Name:name-supplied
    </li>
  </ul>
  <h5>
    Component
  </h5>
  <div class="nhsuk-form-group">
    <div class="nhsuk-checkboxes"
         id="checkboxes_nuwkl"
    >
      <div class="nhsuk-checkboxes__item">
        <input class="nhsuk-checkboxes__input"
               name="name-supplied"
               id="checkboxes_nuwkl-1"
               type="checkbox"
        >
        <label class="nhsuk-label nhsuk-checkboxes__label"
               id="checkboxes_nuwkl-1--label"
               for="checkboxes_nuwkl-1"
        >
          Box 1
        </label>
      </div>
      <div class="nhsuk-checkboxes__item">
        <input class="nhsuk-checkboxes__input"
               name="name-supplied"
               id="checkboxes_nuwkl-2"
               type="checkbox"
        >
        <label class="nhsuk-label nhsuk-checkboxes__label"
               id="checkboxes_nuwkl-2--label"
               for="checkboxes_nuwkl-2"
        >
          Box 2
        </label>
      </div>
      <div class="nhsuk-checkboxes__item">
        <input class="nhsuk-checkboxes__input"
               name="name-supplied"
               id="checkboxes_nuwkl-3"
               type="checkbox"
        >
        <label class="nhsuk-label nhsuk-checkboxes__label"
               id="checkboxes_nuwkl-3--label"
               for="checkboxes_nuwkl-3"
        >
          Box 3
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`FormBehaviour/Checkboxes NoIDSupplied smoke-test 1`] = `
<div style="padding: 20px;">
  <h2>
    Scenario: No ID Supplied
  </h2>
  <h5>
    Expected Behaviour
  </h5>
  <ul class="nhsuk-hint">
    <li>
      Boxes are selectable via their labels
    </li>
    <li>
      The Checkboxes are assigned IDs
    </li>
  </ul>
  <h5>
    Results
  </h5>
  <ul class="nhsuk-hint">
    <li>
      Box 1 ID:checkboxes_f1vbb-1
    </li>
    <li>
      Box 2 ID:checkboxes_f1vbb-2
    </li>
    <li>
      Box 3 ID:checkboxes_f1vbb-3
    </li>
    <li>
      Box 1 Name:checkboxes_f1vbb
    </li>
    <li>
      Box 2 Name:checkboxes_f1vbb
    </li>
    <li>
      Box 3 Name:checkboxes_f1vbb
    </li>
  </ul>
  <h5>
    Component
  </h5>
  <div class="nhsuk-form-group">
    <div class="nhsuk-checkboxes"
         id="checkboxes_f1vbb"
    >
      <div class="nhsuk-checkboxes__item">
        <input class="nhsuk-checkboxes__input"
               name="checkboxes_f1vbb"
               id="checkboxes_f1vbb-1"
               type="checkbox"
        >
        <label class="nhsuk-label nhsuk-checkboxes__label"
               id="checkboxes_f1vbb-1--label"
               for="checkboxes_f1vbb-1"
        >
          Box 1
        </label>
      </div>
      <div class="nhsuk-checkboxes__item">
        <input class="nhsuk-checkboxes__input"
               name="checkboxes_f1vbb"
               id="checkboxes_f1vbb-2"
               type="checkbox"
        >
        <label class="nhsuk-label nhsuk-checkboxes__label"
               id="checkboxes_f1vbb-2--label"
               for="checkboxes_f1vbb-2"
        >
          Box 2
        </label>
      </div>
      <div class="nhsuk-checkboxes__item">
        <input class="nhsuk-checkboxes__input"
               name="checkboxes_f1vbb"
               id="checkboxes_f1vbb-3"
               type="checkbox"
        >
        <label class="nhsuk-label nhsuk-checkboxes__label"
               id="checkboxes_f1vbb-3--label"
               for="checkboxes_f1vbb-3"
        >
          Box 3
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`FormBehaviour/Checkboxes OnChangeAndOnInputHandlers smoke-test 1`] = `
<div style="padding: 20px;">
  <h2>
    Scenario: onChange and onInput handlers are bound without any other props
  </h2>
  <h5>
    Expected Behaviour
  </h5>
  <ul class="nhsuk-hint">
    <li>
      OnChange Handlers are fired using the generated IDs and Names
    </li>
    <li>
      The value is passed through
    </li>
  </ul>
  <h5>
    Component
  </h5>
  <div class="nhsuk-form-group">
    <div class="nhsuk-checkboxes"
         id="checkboxes_7h4nb"
    >
      <div class="nhsuk-checkboxes__item">
        <input class="nhsuk-checkboxes__input"
               name="checkboxes_7h4nb"
               id="checkboxes_7h4nb-1"
               type="checkbox"
               value="1"
        >
        <label class="nhsuk-label nhsuk-checkboxes__label"
               id="checkboxes_7h4nb-1--label"
               for="checkboxes_7h4nb-1"
        >
          Box 1
        </label>
      </div>
      <div class="nhsuk-checkboxes__item">
        <input class="nhsuk-checkboxes__input"
               name="checkboxes_7h4nb"
               id="checkboxes_7h4nb-2"
               type="checkbox"
               value="2"
        >
        <label class="nhsuk-label nhsuk-checkboxes__label"
               id="checkboxes_7h4nb-2--label"
               for="checkboxes_7h4nb-2"
        >
          Box 2
        </label>
      </div>
      <div class="nhsuk-checkboxes__item">
        <input class="nhsuk-checkboxes__input"
               name="checkboxes_7h4nb"
               id="checkboxes_7h4nb-3"
               type="checkbox"
               value="3"
        >
        <label class="nhsuk-label nhsuk-checkboxes__label"
               id="checkboxes_7h4nb-3--label"
               for="checkboxes_7h4nb-3"
        >
          Box 3
        </label>
      </div>
    </div>
  </div>
  <br>
  <h5>
    Current Value
  </h5>
  <pre>
    []
  </pre>
  <h5>
    Change Events
  </h5>
  <ul class="nhsuk-hint">
  </ul>
  <h5>
    Input Events
  </h5>
  <ul class="nhsuk-hint">
  </ul>
</div>
`;
